fixes styling on tablet

--- a/src/scss/components/_answer.scss
+++ b/src/scss/components/_answer.scss
@@ -4,7 +4,7 @@
 	cursor: pointer;
 	color: $color--white;
 	padding: 2rem;
-	font-size: 1.6rem;
+	font-size: 1.4rem;
 	line-height: 1.4;
 	font-weight: 600;
 
@@ -26,7 +26,7 @@
 		background-color: $color--danger !important;
 	}
 
-	@media screen and (max-width: 600px) {
+	@media screen and (max-width: 820px) {
 		font-size: 0.9rem;
 		padding: 1rem;
 	}
