--- a/src/scss/components/_question.scss
+++ b/src/scss/components/_question.scss
@@ -5,7 +5,7 @@
 	justify-content: center;
 	text-align: center;
 
-	@media screen and (max-width: 600px) {
+	@media screen and (max-width: 820px) {
 		font-size: 0.7rem;
 	}
 }
