--- a/src/scss/components/_results.scss
+++ b/src/scss/components/_results.scss
@@ -36,7 +36,7 @@
 			gap: 2rem;
 			align-items: center;
 
-			@media screen and (max-width: 600px) {
+			@media screen and (max-width: 820px) {
 				margin: 0;
 			}
 
@@ -61,7 +61,7 @@
 					h2 {
 						margin: 0;
 
-						@media screen and (max-width: 600px) {
+						@media screen and (max-width: 820px) {
 							font-size: 1.2rem;
 						}
 					}
@@ -72,7 +72,7 @@
 					margin-top: 1rem;
 					margin-bottom: 0;
 
-					@media screen and (max-width: 600px) {
+					@media screen and (max-width: 820px) {
 						font-size: 1rem;
 					}
 				}
@@ -88,7 +88,7 @@
 		&-icon {
 			font-size: 2.6rem;
 
-			@media screen and (max-width: 600px) {
+			@media screen and (max-width: 820px) {
 				font-size: 1.6rem;
 			}
 		}
