--- a/src/scss/elements/_container.scss
+++ b/src/scss/elements/_container.scss
@@ -10,7 +10,7 @@
 	padding: 4rem;
 	border-radius: 0.8rem;
 
-	@media screen and (max-width: 600px) {
+	@media screen and (max-width: 820px) {
 		padding: 1rem;
 	}
 
