--- a/src/scss/elements/_markdown.scss
+++ b/src/scss/elements/_markdown.scss
@@ -1,7 +1,7 @@
 .markdown {
 	font-size: 1.4rem;
 
-	@media screen and (max-width: 600px) {
+	@media screen and (max-width: 820px) {
 		font-size: 1rem;
 	}
 
